--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -622,7 +622,7 @@
 		"Timezone" : "Часовой пояс",
 		"YesIherewithagreewitha" : "Да, настоящим я согласен на трансплантацию одного или нескольких моих органов / тканей после того, как врачи объявят меня мертвым.",
 		"followingorgantissues:" :"Да, я разрешаю это, за исключением следующих органов / тканей:",
-		"Yes, I allowthisonlyforfollowing" : "Да, я разрешаю это только для следующих органов / тканей:",
+		"allowthisonlyforfollowing" : "Да, я разрешаю это только для следующих органов / тканей:",
 		"Yes" : "да",
 		"No" : "Нет",
 		"Blood" : "Кровь",
