--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -615,14 +615,13 @@
 		"capab_Doctors" : "Doctora",
 		"capab_Patients" : "Paciente",
 		"Nurse" : "Enfermero",
-		"Pharmacist" : "Farmacéutica",
 		"Professional" : "Profesional",
 		"Appointmentiscanceled" : "Se cancela la cita",
 		"DetailsQuestions" :"Detalles / Preguntas",
 		"Timezone" : "Zona horaria",
 		"YesIherewithagreewitha" : "Sí, por la presente estoy de acuerdo con un trasplante de uno o más órganos / tejidos míos después de que los médicos me hayan declarado muerto.",
 		"followingorgantissues:" :"Sí, lo permito, excepto para los siguientes órganos / tejidos:",
-		"Yes, I allowthisonlyforfollowing" : "Sí, permito esto solo para los siguientes órganos / tejidos:",
+		"allowthisonlyforfollowing" : "Sí, permito esto solo para los siguientes órganos / tejidos:",
 		"Yes" : "si",
 		"No" : "No",
 		"Blood" : "Sangre",
