--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -616,14 +616,13 @@
 		"capab_Doctors" : "Médica",
 		"capab_Patients" : "Paciente",
 		"Nurse" : "Enfermeira",
-		"Pharmacist" : "Farmacêutica",
 		"Professional" : "Profissional",
 		"Appointmentiscanceled" : "Compromisso cancelado",
 		"DetailsQuestions" :"Detalhes / perguntas",
 		"Timezone" : "Fuso horário",
 		"YesIherewithagreewitha" : "Sim, concordo com o transplante de um ou mais órgãos / tecidos meus depois que os médicos me declararam morto",
 		"followingorgantissues:" :"Sim, eu permito isso, exceto para os seguintes órgãos / tecidos:",
-		"Yes, I allowthisonlyforfollowing" : "Sim, eu permito isso apenas para os seguintes órgãos / tecidos:",
+		"allowthisonlyforfollowing" : "Sim, eu permito isso apenas para os seguintes órgãos / tecidos:",
 		"Yes" : "Sim",
 		"No" : "Não",
 		"Blood" : "Sangue",
