Pharmacy Journal, Login by enter, archive error, design issues too

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -632,7 +632,7 @@
 		"ScndOpinion": "Second Opinions",
 		"Contact" :"Contact",
 		"Services" : "Services",
-		"latest_info" : "latest_info",
+		"latest_info" : "Latest information",
 		"fors": "for",
 		"Enteremailfirst" : "Enter email first",
 		"Entermessage" : "Enter message",
