add trello issues- given by aakash

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -527,7 +527,7 @@
 		"standerd_ques": "Standard questions",
 		"patient_health_status": "Patients Health Status",
 		"Medications": "Medications",
-		"dignoses": "Diagnoses",
+		"dignoses": "Diagnosis",
 		"suported_file_type_jpg_png": "Supported file types: .jpg, .png, .pdf",
 		"snd_patient_timeline_email": "Send to patient's Timeline and Email",
 		"reject": "Reject",
