--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -968,6 +968,19 @@
     "update_inquery": "Обновить запрос",
     "dearchive_entry_q": "Вы действительно хотите разархивировать эту запись",
     "delete_for_msg": "Вы действительно хотите удалить эту запись? После этого, она будет удалена навсегда",
-    "make_personilized_acc": "Чтобы настроить вашу учетную запись, добавьте фотографию своего профиля. Фотография будет видна только вам и людям из вашей группы."
+    "make_personilized_acc": "Чтобы настроить вашу учетную запись, добавьте фотографию своего профиля. Фотография будет видна только вам и людям из вашей группы.",
+
+    "rmv_entry": "удалить запись",
+		"download_journal_report": "СКАЧАТЬ ЖУРНАЛЬНЫЙ ОТЧЕТ",
+		"ur_emrgancy_access": "Ваш экстренный доступ",
+		"patient_emrgancy_access": "Экстренный доступ для пациентов",
+		"contact_other_info":"Контакты и другая информация",
+		"telephone_nmbr":"Номер телефона",
+    "organ_donar_status":"Статус донора органов",
+    "emegancy_access":"Аварийный доступ",
+    "invite_doc":"Пригласить врачей",
+    "pharmacy_access":"Доступ в аптеку",
+    "cart_removed":"Корзина успешно удалена",
+    "pay_with":"Оплатить с"
   }
 }
