--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -968,6 +968,19 @@
 		"update_inquery":"Anfrage ändern",
 		"dearchive_entry_q":"Möchten Sie diesen Eintrag wirklich dearchivieren?",
 		"delete_for_msg":"Möchten Sie diesen Eintrag wirklich löschen? Dies kann im Nachhinein nicht rückgängig gemacht werden.",
-		"make_personilized_acc":"Fügen Sie Ihr Profilfoto hinzu, um Ihr Konto persönlicher zu gestalten. Es ist nur für Sie und die Personen in Ihrer Vertrauensliste sichtbar."
+		"make_personilized_acc":"Fügen Sie Ihr Profilfoto hinzu, um Ihr Konto persönlicher zu gestalten. Es ist nur für Sie und die Personen in Ihrer Vertrauensliste sichtbar.",
+		
+		"rmv_entry": "Eintrag entfernen",
+		"download_journal_report": "JOURNALBERICHT HERUNTERLADEN",
+		"ur_emrgancy_access": "Ihr Notfallzugang",
+		"patient_emrgancy_access": "Notfallzugang für Patienten",
+		"contact_other_info":"Kontakte & andere Infos",
+		"telephone_nmbr":"Telefonnummer",
+		"organ_donar_status":"Organspender Status",
+		"emegancy_access":"Notfallzugang",
+		"invite_doc":"Ärzte einladen",
+		"pharmacy_access":"Apothekenzugang",
+		"cart_removed":"Warenkorb erfolgreich entfernt",
+		"pay_with":"Bezahlen mit"
 	}
 }
