--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -969,6 +969,19 @@
 		"update_inquery":"Atualizar a consulta",
 		"dearchive_entry_q":"Realmente deseja pesquisar esta entrada",
 		"delete_for_msg":"Realmente deseja Excluir esta entrada? Isso significa que ela será excluída para sempre",
-		"make_personilized_acc":"Para tornar sua conta mais personalizada, adicione sua foto de perfil. Ela só ficará visível para si e para as pessoas do seu grupo."
+		"make_personilized_acc":"Para tornar sua conta mais personalizada, adicione sua foto de perfil. Ela só ficará visível para si e para as pessoas do seu grupo.",
+
+		"rmv_entry": "remover entrada",
+		"download_journal_report": "BAIXAR RELATÓRIO DE REVISTA",
+		"ur_emrgancy_access": "Seu acesso de emergência",
+		"patient_emrgancy_access": "Noodtoegang voor patiënten",
+		"contact_other_info":"Contatos e outras informações",
+		"telephone_nmbr":"Número de telefone",
+		"organ_donar_status":"Status de doador de órgãos",
+		"emegancy_access":"Acesso de Emergência",
+		"invite_doc":"Convide Médicos",
+		"pharmacy_access":"Acesso à Farmácia",
+		"cart_removed":"Carrinho removido com sucesso",
+		"pay_with":"Pagar com"
 	}
 }
