--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -982,6 +982,18 @@
 		"pharmacy_access":"药房访问",
 		"cart_removed":"购物车已成功移除",
 		"pay_with":"使用。。。支付",
-		"full_report":"完整报告"
+		"full_report":"完整报告",
+		"item_added_to_wishlist":"商品已成功添加到愿望清单",
+		"item_present_in_cart":"购物车中已有商品",
+		"previous_lesson":"上一课",
+		"next_lesson":"下一课",
+		"rating_sent_success":"评分已成功发送",
+		"plz_give_rate":"请给价",
+		"clear_point":"明确点",
+		"language_updated":"语言已更新",
+		"language_not_selected":"未选择语言。",
+		"emergancy_dignosis":"紧急诊断",
+		"trvl_diagnosis":"旅行诊断",
+		"doc_name":"医生姓名"
 	}
 }
