--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -982,6 +982,18 @@
 		"pharmacy_access":"Acceso a la farmacia",
 		"cart_removed":"Carrito eliminado correctamente",
 		"pay_with":"Pagar con",
-		"full_report":"Reporte completo"
+		"full_report":"Reporte completo",
+		"item_added_to_wishlist":"Artículo agregado exitosamente a la lista de deseos",
+		"item_present_in_cart":"El artículo ya está presente en el carrito",
+		"previous_lesson":"Leccion previa",
+		"next_lesson":"Siguiente lección",
+		"rating_sent_success":"La calificación se envía correctamente",
+		"plz_give_rate":"Por favor indique la tarifa",
+		"clear_point":"Puntos claros",
+		"language_updated":"El idioma está actualizado",
+		"language_not_selected":"El idioma no está seleccionado.",
+		"emergancy_dignosis":"Diagnóstico de emergencia",
+		"trvl_diagnosis":"Diagnóstico de viajes",
+		"doc_name":"Nombre del doctor"
 	}
 }
