--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -992,6 +992,7 @@
 		"language_not_selected":"Lugha haichaguliwi.",
 		"emergancy_dignosis":"Utambuzi wa dharura",
 		"trvl_diagnosis":"Utambuzi wa kusafiri",
-		"doc_name":"Jina la Daktari"
+		"doc_name":"Jina la Daktari",
+		"DarkMode" :"Njia ya Giza"
 	}
 }
