Doc , nurse, Insurance language completed

--- a/src/translations/ch.json
+++ b/src/translations/ch.json
@@ -999,6 +999,32 @@
 		"user_type_all":"用户类型：全部",
 		"search_timeline":"搜索时间表",
 		"file_content":"文件内容",
-		"first_day_visit":"一日游"
+		"first_day_visit":"一日游",
+		"suggest_new_time":"建议新时间",
+		"book_appointment":"预约书",
+		"type_email_press_enter":"输入电子邮件，然后按Enter或标签",
+		"upload_scanned":"上传扫描",
+		"scanned":"已扫描",
+		"send_prescription":"发送处方",
+		"time_zone":"时区",
+		"responsible_authority":"负责机构",
+		"registration":"注册",
+		"plz_fill_time_duration_appointment":"请填写预约时间",
+		"set_online_working_hour":"设置在线工作时间",
+		"monday":"星期一",
+		"tuseday":"星期二",
+		"wednesday":"星期三",
+		"thursday":"星期四",
+		"friday":"星期五",
+		"saturday":"星期六",
+		"sunday":"星期日",
+		"copy_to_all_time":"将时间复制到全部",
+		"update_inquiry":"更新查询？",
+		"are_u_sure_remove_inquiry":"您确定要删除此查询吗？",
+		"srvcs_appointment":"服务与预约",
+		"Security":"安全",
+		"date_time":"约会时间",
+		"enter_patient_id":"输入患者ID",
+		"reg_number_if_aplicble":"注册号（如果适用）"
 	}
 }
