--- a/src/translations/de.json
+++ b/src/translations/de.json
@@ -999,7 +999,32 @@
 		"user_type_all":"Benutzertyp: Alle",
 		"search_timeline":"Zeitleiste suchen",
 		"file_content":"Dateiinhalt",
-		"first_day_visit":"Erster Tagesbesuch"
-		
+		"first_day_visit":"Erster Tagesbesuch",
+		"suggest_new_time":"Neue Zeit vorschlagen"	,
+		"book_appointment":"Einen Termin verabreden",
+		"type_email_press_enter":"Geben Sie E-Mails ein und drücken Sie die Eingabetaste oder die Tabulatortaste",
+		"upload_scanned":"Hochgeladen gescannt",
+		"scanned":"Gescannt"	,
+		"send_prescription":"Rezept senden",
+		"time_zone":"Zeitzone",
+		"responsible_authority":"Verantwortliche Autorität",
+		"registration":"Anmeldung",
+		"plz_fill_time_duration_appointment":"Bitte geben Sie die Zeitdauer des Termins ein",
+		"set_online_working_hour":"Stellen Sie die Online-Arbeitszeiten ein",
+		"monday":"Montag",
+		"tuseday":"Dienstag",
+		"wednesday":"Mittwoch",
+		"thursday":"Donnerstag",
+		"friday":"Freitag",
+		"saturday":"Samstag",
+		"sunday":"Sonntag",
+		"copy_to_all_time":"Kopiert die Zeit an alle",
+		"update_inquiry":"Anfrage aktualisieren?",
+		"are_u_sure_remove_inquiry":"Sind Sie sicher, diese Anfrage zu entfernen?",
+		"srvcs_appointment":"Dienstleistungen & Termine",
+		"Security":"Sicherheit",
+		"date_time":"Terminzeit",
+		"enter_patient_id":"Geben Sie die Patienten-ID ein",
+		"reg_number_if_aplicble":"Registrierungsnummer (falls zutreffend)"
 	}
 }
