--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -997,6 +997,32 @@
 		"user_type_all":"User Type :All",
 		"search_timeline":"Search timeline",
 		"file_content":"File Content",
-		"first_day_visit":"First Day Visit"
+		"first_day_visit":"First Day Visit",
+		"suggest_new_time":"Suggest new time",
+		"book_appointment":"Book Appointment",
+		"type_email_press_enter":"Type emails and press enter or tabs",
+		"upload_scanned":"Upload scanned",
+		"scanned":"Scanned",
+		"send_prescription":"Send Prescription",
+		"time_zone":"Time zone",
+		"responsible_authority":"Responsible authority",
+		"registration":"Registration",
+		"plz_fill_time_duration_appointment":"Please fill the Time duration of appointment",
+		"set_online_working_hour":"Set online working hours",
+		"monday":"Monday",
+		"tuseday":"Tuseday",
+		"wednesday":"Wednesday",
+		"thursday":"Thursday",
+		"friday":"Friday",
+		"saturday":"Saturday",
+		"sunday":"Sunday", 
+		"copy_to_all_time":"Copys time to all",
+		"update_inquiry":"Update the Inquiry ?",
+		"are_u_sure_remove_inquiry":"Are you sure  to remove this Inquiry?",
+		"srvcs_appointment":"Services & Appointments",
+		"Security":"Security",
+		"date_time":"Date & Time",
+		"enter_patient_id":"Enter Patient ID",
+		"reg_number_if_aplicble":"Registration Number (if applicable)"
 		}
 }
