--- a/src/translations/nl.json
+++ b/src/translations/nl.json
@@ -1509,6 +1509,31 @@
 		"user_type_all":"Gebruikerstype: alles",
 		"search_timeline":"Tijdlijn zoeken",
 		"file_content":"Bestandsinhoud",
-		"first_day_visit":"Eerste dagbezoek"
+		"first_day_visit":"Eerste dagbezoek",
+		"suggest_new_time":"Stel een nieuwe tijd voor",
+		"book_appointment":"Maak een afspraak",
+		"type_email_press_enter":"Typ e-mails en druk op enter of tabbladen",
+		"upload_scanned":"Upload gescand",
+		"scanned":"Gescand",
+		"send_prescription":"Stuur recept",
+		"time_zone":"Tijdzone",
+		"responsible_authority":"Verantwoordelijke instantie",
+		"registration":"Registratie",
+		"plz_fill_time_duration_appointment":"Gelieve de tijdsduur van de afspraak in te vullen",
+		"set_online_working_hour":"Stel online werktijden in",
+		"monday":"maandag",
+		"tuseday":"dinsdag",
+		"wednesday":"woensdag",
+		"thursday":"donderdag",
+		"friday":"vrijdag",
+		"saturday":"zaterdag",
+		"sunday":"zondag",
+		"copy_to_all_time":"Kopieert tijd naar iedereen",
+		"update_inquiry":"De aanvraag bijwerken?",
+		"are_u_sure_remove_inquiry":"Weet u zeker dat u deze aanvraag wilt verwijderen?",
+		"srvcs_appointment":"Services & Afspraken",
+		"Security":"Veiligheid",
+		"enter_patient_id":"Voer de patiënt-ID in",
+		"reg_number_if_aplicble":"Registratienummer (indien van toepassing)"
 	}
 }
