--- a/src/translations/pt.json
+++ b/src/translations/pt.json
@@ -1000,6 +1000,32 @@
 		"user_type_all":"Tipo de usuário: Todos",
 		"search_timeline":"Linha do tempo de pesquisa",
 		"file_content":"Conteúdo do arquivo",
-		"first_day_visit":"Visita de primeiro dia"
+		"first_day_visit":"Visita de primeiro dia",
+		"suggest_new_time":"Sugira novo horário",
+		"book_appointment":"Anotação de livro",
+		"type_email_press_enter":"Digite e-mails e pressione Enter ou guias",
+		"upload_scanned":"Upload digitalizado",
+		"scanned":"Digitalizado",
+		"send_prescription":"Enviar receita",
+		"time_zone":"Fuso horário",
+		"responsible_authority":"Autoridade responsável",
+		"registration":"Cadastro",
+		"plz_fill_time_duration_appointment":"Por favor, preencha o tempo de duração do compromisso",
+		"set_online_working_hour":"Defina o horário de trabalho online",
+		"monday":"Segunda-feira",
+		"tuseday":"terça",
+		"wednesday":"Quarta feira",
+		"thursday":"Quinta feira",
+		"friday":"Sexta-feira",
+		"saturday":"sábado",
+		"sunday":"Domigo",
+		"copy_to_all_time":"Hora de copiar para todos",
+		"update_inquiry":"Atualizar o inquérito?",
+		"are_u_sure_remove_inquiry":"Tem certeza que deseja remover este inquérito?",
+		"srvcs_appointment":"Serviços e compromissos",
+		"Security":"Segurança",
+		"date_time":"Data hora",
+		"enter_patient_id":"Insira a ID do paciente",
+		"reg_number_if_aplicble":"Número de registro (se aplicável)"
 	}
 }
