--- a/src/translations/rs.json
+++ b/src/translations/rs.json
@@ -537,71 +537,70 @@
 
     "accept":"Принять",
 		"pharma_prescription":"Рецепт аптеки",
-		"send_prescription_to_pharmacy":"Send prescriptions to pharmacies",
-		"uplod_scanned_prescription":"Upload scanned prescriptions",
-		"Pharmacy":"Pharmacy",
-		"search_pharmacy_by_name_id":"Search Pharmacy by name or ID",
-		"show_pharmacy_within_radious":"Show Pharmacies within my radius of",
-		"short_msg_optional":"Short message (optional)",
-		"add_this_patient_journal":"Add this to Patient Journal",
-		"send_invite":"Send invites",
-		"pharmacy_prescription_model":"Pharmacy Prescription Model",
-		"profile_information":"Profile information",
-		"this_is_ur_profile_info":"This is your profile information.",
+		"send_prescription_to_pharmacy":"Отправить рецепты в аптеки",
+		"uplod_scanned_prescription":"Загрузить отсканированные рецепты",
+		"Pharmacy":"Аптека",
+		"search_pharmacy_by_name_id":"Поиск аптек по названию или идентификатору",
+		"show_pharmacy_within_radious":"Показать аптеки в пределах моего радиуса",
+		"short_msg_optional":"Короткое сообщение (необязательно)",
+		"add_this_patient_journal":"Добавить в Журнал пациента",
+		"send_invite":"Отправить приглашения",
+		"pharmacy_prescription_model":"Модель рецепта аптеки",
+		"profile_information":"Информация профиля",
+		"this_is_ur_profile_info":"Это информация вашего профиля.",
     "change_id":"Изменить ID",
-		"edit_id_or_pin":"Edit ID and PIN",
-		"profile_id_pin_changed":"Profile ID and PIN is changed",
-		"profile_id":"Profile ID",
-		"fax_nmbr":"Fax number",
-		"sub_specilaity":"Sub-specialty",
-		"profile_qr_code":"Profile QR code",
-		"the_info_update_succefully":"The information is updated succesfully",
-		"the_info_isnt_update_succ":"The information is not updated succesfully",
-		"offc_info":"Office information",
-		"this_is_what_patient_see_arrenging_appointment":"This is what patients see when they are arranging an appointment",
-		"we_offer":"We offer",
-		"the_appointment_srvc_success_updated":"The Appointment and Services succefully updated",
-		"plz_fill_break_timeslot_for_aapointment":"Please Fill the break timeslot for all the appoinments",
+		"edit_id_or_pin":"Изменить идентификатор и PIN-код",
+		"profile_id_pin_changed":"ID профиля и PIN-код изменены",
+		"profile_id":"ID профиля",
+		"fax_nmbr":"Номер факса",
+		"sub_specilaity":"Подспециальность",
+		"profile_qr_code":"QR-код профиля",
+		"the_info_update_succefully":"Информация успешно обновлена",
+		"the_info_isnt_update_succ":"Информация не обновляется успешно",
+		"offc_info":"Информация об офисе",
+		"this_is_what_patient_see_arrenging_appointment":"Это то, что видят пациенты, когда записываются на прием",
+		"we_offer":"Мы предлагаем",
+		"the_appointment_srvc_success_updated":"Назначение и услуги обновлены",
+		"plz_fill_break_timeslot_for_aapointment":"Пожалуйста, заполните временной интервал перерыва для всех встреч",
 		"instant_activation_deactivation_offer_srvc":"Instant activation and deactivation of services you offer",
-		"chat_vdocall":"Chat & Videocalls",
-		"invite_patient_to_contact_online":"Invite your patients to contact you online",
-		"prescription_and_sick_cert":"Prescriptions & Sick Certificates",
-		"issue_prescription_and_sickCert_online":"Issue prescriptions & sick certificates online",
-		"onine_sick_cert":"Online Sick Certificates",
-		"online_prescription":"Online Prescriptions",
-		"select_appointment_set_schedule":"Select appointment types and set your schedule",
-		"holiday_period_btw":"Holiday period between:",
-		"appointment_system":"Appointment System",
-		"offer_practice_online_appointment":"Offer practice and online appointment with",
-		"copy_time_to_all":"Copy time to all",
-		"set_timeslot_duration":"Set timeslot duration:",
-		"break_time":"Break time:",
-		"appointment_can_be_booked":"Appointment can be booked:",
-		"up_to_days":"Up to days",
-		"Max":"Max",
-		"before_day_of_appointment":" before the day of appointment",
-		"hourse_before_time_appointment":"hours, before the time of appointment",
-		"add_new_patient":"Add new Patient",
-		"find_patient":"Find a patient...",
-		"patient_data_access":"Patient Data Access"	,
-		"private_doc_rest":"Private Doctor Request",
-		"age":"Age",
-		"not_mentioned":"Not  mentioned",
-		"openjournal":"Open Journal",
-		"personal_info":"Personal info",
-		"remove_patient":"Remove patient",
-		"ask_patient_to_become_a_private_doctor":"Ask patient to become a private doctor",
-		"email_or_id":"Email or ID",
-		"enter_patient_email_id":"Enter patients email or ID",
-		"Ask":"Ask",
-		"new_patient":"New Patient",
-		"add_new_patient_in_list":"Add new patient in your list",
-		"succ1" : "The mail is sent to the patient",
-		"Log_into": "Log in to",
-		"Mnotvalids": "Mobile number is not valid",
-		"click_here_uplod_license": "Click here to upload your license",
-		"password_must_have_its_condition": "Password must be have Capital letter and numeric value and more than 6 character",
-
+		"chat_vdocall":"Чат и видеозвонки",
+		"invite_patient_to_contact_online":"Пригласите своих пациентов связаться с вами онлайн",
+		"prescription_and_sick_cert":"Рецепты и справки о болезни",
+		"issue_prescription_and_sickCert_online":"Выдача рецептов и справок о болезни онлайн",
+		"onine_sick_cert":"Онлайн-справки о болезни",
+		"online_prescription":"Интернет-рецепты",
+		"select_appointment_set_schedule":"Выберите типы встреч и настройте расписание",
+		"holiday_period_btw":"Период отпуска между:",
+		"appointment_system":"Система записи",
+		"offer_practice_online_appointment":"Предлагаем практику и онлайн-встречу с",
+		"copy_time_to_all":"Скопируйте время для всех",
+		"set_timeslot_duration":"Установить продолжительность временного интервала:",
+		"break_time":"Перерыв:",
+		"appointment_can_be_booked":"Запись на прием можно записать:",
+		"up_to_days":"До дней",
+		"Max":"Максимум",
+		"before_day_of_appointment":"до дня назначения",
+		"hourse_before_time_appointment":"часов, до назначенного времени",
+		"add_new_patient":"Добавить нового пациента",
+		"find_patient":"Найдите пациента ...",
+		"patient_data_access":"Доступ к данным пациента"	,
+		"private_doc_rest":"Запрос частного врача",
+		"age":"Возраст",
+		"not_mentioned":"Не упомянуто",
+		"openjournal":"Открыть журнал",
+		"personal_info":"Личная информация",
+		"remove_patient":"Удалить пациента",
+		"ask_patient_to_become_a_private_doctor":"Попросите пациента стать частным врачом",
+		"email_or_id":"Электронная почта или ID",
+		"enter_patient_email_id":"Введите адрес электронной почты пациента или ID",
+		"Ask":"Просить",
+		"new_patient":"Новый пациент",
+		"add_new_patient_in_list":"Добавить нового пациента в свой список",
+		"succ1" : "Письмо отправлено пациенту",
+		"Log_into": "Авторизоваться",
+		"Mnotvalids": "Номер мобильного телефона недействителен",
+		"click_here_uplod_license": "Щелкните здесь, чтобы загрузить лицензию",
+		"password_must_have_its_condition": "Пароль должен состоять из заглавных букв и цифр и содержать более 6 символов.",
     "password_reset":"Сброс пароля",
     "page_not_found":"Страница не найдена",
     "page_temparary_unavailable":"Страница, которую вы ищете, могла быть удалена, если ее имя было изменено или она временно недоступна.",
@@ -999,6 +998,32 @@
     "user_type_all":"Тип пользователя: Все",
     "search_timeline":"Хронология поиска",
     "file_content":"Содержимое файла",
-    "first_day_visit":"Посещение первого дня"
+    "first_day_visit":"Посещение первого дня",
+    "suggest_new_time":"Предложи новое время",
+    "book_appointment":"Запись на прием",
+    "type_email_press_enter":"Введите электронные письма и нажмите ввод или вкладки",
+    "upload_scanned":"Загрузить отсканированный",
+    "scanned":"Сканировано",
+    "send_prescription":"Отправить рецепт",
+    "time_zone":"Часовой пояс",
+    "responsible_authority":"Ответственный орган",
+    "registration":"Постановка на учет",
+    "plz_fill_time_duration_appointment":"Пожалуйста, заполните поле Время приема",
+    "set_online_working_hour":"Установить рабочее время онлайн",
+    "monday":"понедельник",
+		"tuseday":"вторник",
+		"wednesday":"Среда",
+		"thursday":"Четверг",
+		"friday":"Пятница",
+		"saturday":"суббота",
+    "sunday":"Воскресенье",
+    "copy_to_all_time":"Копирует время всем",
+    "update_inquiry":"Обновить запрос?",
+    "are_u_sure_remove_inquiry":"Вы действительно хотите удалить этот запрос?",
+    "srvcs_appointment":"Услуги и встречи",
+    "Security":"Безопасность",
+    "date_time":"Дата и время",
+    "enter_patient_id":"Введите идентификатор пациента",
+    "reg_number_if_aplicble":"Регистрационный номер (если применимо)"
   }
 }
