--- a/src/translations/sp.json
+++ b/src/translations/sp.json
@@ -999,6 +999,32 @@
 		"user_type_all":"Tipo de usuario: Todos",
 		"search_timeline":"Línea de tiempo de búsqueda",
 		"file_content":"Contenido del archivo",
-		"first_day_visit":"Visita del primer día"
+		"first_day_visit":"Visita del primer día",
+		"suggest_new_time":"Sugerir nueva hora",
+		"book_appointment":"Reservar una cita",
+		"type_email_press_enter":"Escriba correos electrónicos y presione enter o pestañas",
+		"upload_scanned":"Subir escaneado",
+		"scanned":"Escaneado",
+		"send_prescription":"Enviar receta",
+		"time_zone":"Zona horaria",
+		"responsible_authority":"Autoridad responsable",
+		"registration":"Registro",
+		"plz_fill_time_duration_appointment":"Por favor complete la Duración de la cita",
+		"set_online_working_hour":"Establecer horas de trabajo en línea",
+		"monday":"lunes",
+		"tuseday":"martes",
+		"wednesday":"miércoles",
+		"thursday":"jueves",
+		"friday":"viernes",
+		"saturday":"sábado",
+		"sunday":"domingo",
+		"copy_to_all_time":"Copys tiempo a todos",
+		"update_inquiry":"¿Actualizar la consulta?",
+		"are_u_sure_remove_inquiry":"¿Estás segura de eliminar esta consulta?",
+		"srvcs_appointment":"Servicios y citas",
+		"Security":"Seguridad",
+		"date_time":"Fecha y hora",
+		"enter_patient_id":"Ingrese la identificación del paciente",
+		"reg_number_if_aplicble":"Número de registro (si corresponde)"
 	}
 }
