--- a/src/translations/sw.json
+++ b/src/translations/sw.json
@@ -997,6 +997,32 @@
 		"user_type_all":"Aina ya Mtumiaji: Zote",
 		"search_timeline":"Rekodi ya nyakati ya utaftaji",
 		"file_content":"Yaliyomo kwenye faili",
-		"first_day_visit":"Ziara ya Siku ya Kwanza"
+		"first_day_visit":"Ziara ya Siku ya Kwanza",
+		"suggest_new_time":"Pendekeza wakati mpya",
+		"book_appointment":"Uteuzi wa Kitabu",
+		"type_email_press_enter":"Andika barua pepe na ubonyeze kuingia au tabo",
+		"upload_scanned":"Pakia imechanganuliwa",
+		"scanned":"Imechanganuliwa",
+		"send_prescription":"Tuma Dawa",
+		"time_zone":"Saa za eneo",
+		"responsible_authority":"Mamlaka ya uwajibikaji",
+		"registration":"Usajili",
+		"plz_fill_time_duration_appointment":"Tafadhali jaza muda wa miadi",
+		"set_online_working_hour":"Weka masaa ya kufanya kazi mkondoni",
+		"monday":"Jumatatu",
+		"tuseday":"Jumanne",
+		"wednesday":"Jumatano",
+		"thursday":"Alhamisi",
+		"friday":"Ijumaa",
+		"saturday":"Jumamosi",
+		"sunday":"Jumapili",
+		"copy_to_all_time":"Nakala wakati kwa wote",
+		"update_inquiry":"Sasisha uchunguzi?",
+		"are_u_sure_remove_inquiry":"Je! Una uhakika wa kuondoa Uchunguzi huu?",
+		"srvcs_appointment":"Huduma na Uteuzi",
+		"Security":"Usalama",
+		"date_time":"Tarehe na Wakati",
+		"enter_patient_id":"Ingiza Kitambulisho cha Mgonjwa",
+		"reg_number_if_aplicble":"Nambari ya Usajili (ikiwa inafaa)"
 	}
 }
